comment on registration email

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -327,7 +327,7 @@
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-clipboard fa-stack-1x "></i></span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
-                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
+                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Quarantine FollowUp</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
@@ -337,7 +337,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
-                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
+                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
               </ul>
@@ -394,7 +394,7 @@
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-clipboard fa-stack-1x "></i></span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
-                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
+                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Quarantine Followup</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
@@ -404,7 +404,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
-                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
+                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
               </ul>
@@ -470,7 +470,7 @@
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-clipboard fa-stack-1x "></i></span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
-                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
+                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Quarantine FollowUp</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
@@ -480,7 +480,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
-                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
+                  <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
               </ul>
