truck driver placrholder fixes

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -207,7 +207,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-home fa-stack-1x "></i></span>HOME CARE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
+                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Home Care Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care Followup</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
@@ -335,7 +335,8 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-home fa-stack-1x "></i></span>HOME CARE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
+                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Home
+                    Care Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
@@ -402,7 +403,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-home fa-stack-1x "></i></span>HOME CARE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
+                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Home Care Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
@@ -478,7 +479,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-home fa-stack-1x "></i></span>HOME CARE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>HomeCare Registration</a></li>
+                  <li><a href="/home_care_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Home Care Registration</a></li>
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
