--- a/veoc/templates/veoc/home_care_registration_form.html
+++ b/veoc/templates/veoc/home_care_registration_form.html
@@ -20,15 +20,15 @@
                     <div class="form-row" id="caller_details_div">
                        <div class="form-group col-md-4">
                          <label for="callername">First Name : *</label>
-                         <input class="form-control" type="text" id="first_name" name="first_name" placeholder="first name" required/>
+                         <input class="form-control" type="text" id="first_name" name="first_name" placeholder="First Name" required/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="middle_name">Middle Name : </label>
-                         <input class="form-control" type="text" id="middle_name" name="middle_name" placeholder="middle name"/>
+                         <input class="form-control" type="text" id="middle_name" name="middle_name" placeholder="Middle Name"/>
                        </div>
                         <div class="form-group col-md-4">
                          <label for="callernumber">Last Name : *</label>
-                         <input class="form-control" type="text" id="last_name" name="last_name" placeholder="last name" required/>
+                         <input class="form-control" type="text" id="last_name" name="last_name" placeholder="Last Name" required/>
                        </div>
                     </div>
                     <div class="form-row" id="gender_details_div">
@@ -47,11 +47,11 @@
                       <div class="form-row" id="country_details_div">
                        <div class="form-group col-md-6">
                          <label for="callername">Phone Number : *</label>
-                         <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength="10" placeholder="country code first e.g +254720000000" required/>
+                         <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength="10" placeholder="Country Code, Start With +254 e.g +254720000000" required/>
                        </div>
                        <div class="form-group col-md-6">
                          <label for="callernumber">ID / Passport Number : *</label>
-                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="passport number" required/>
+                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="Passport Number" required/>
                        </div>
                     </div>
                     <div class="form-row" id="country_details_div">
@@ -100,7 +100,7 @@
                      <div class="form-row" id="diagnosis_status_div">
                        <div class="form-group col-md-6">
                          <label for="status">Place of Diagnosis : </label>
-                         <input class="form-control" type="text" id="place_of_diagnosis" name="place_of_diagnosis" size="45" placeholder="place of diagnosis"/>
+                         <input class="form-control" type="text" id="place_of_diagnosis" name="place_of_diagnosis" size="45" placeholder="Place of Diagnosis"/>
                        </div>
                        <div class="form-group col-md-6">
                          <label for="datereport">Date of Contact : *</label>
@@ -110,7 +110,7 @@
                      <div class="form-row" id="country_details_div">
                        <div class="form-group col-md-6">
                          <label for="comorbidity">Comorbidity : </label>
-                         <input class="form-control" type="text" id="comorbidity" name="comorbidity" placeholder="comorbidity"/>
+                         <input class="form-control" type="text" id="comorbidity" name="comorbidity" placeholder="Comorbidity"/>
                        </div>
                        <div class="form-group col-md-6">
                          <label for="drugs">Any drugs on? : </label>
@@ -120,11 +120,11 @@
                      <div class="form-row" id="gender_details_div">
                         <div class="form-group col-md-6">
                           <label for="callername">Next of Kin : </label>
-                          <input class="form-control" type="text" id="nok" name="nok" placeholder="next of kin"/>
+                          <input class="form-control" type="text" id="nok" name="nok" placeholder="Next of Kin"/>
                         </div>
                         <div class="form-group col-md-6">
                           <label for="callername">Next of Kin Phone No : </label>
-                          <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of kin phone number"/>
+                          <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of Kin Phone Number"/>
                         </div>
                      </div>
                      <div class="form-row" id="save_div">
