--- a/veoc/templates/veoc/truck_driver_registration.html
+++ b/veoc/templates/veoc/truck_driver_registration.html
@@ -65,21 +65,21 @@
                     <div class="form-row" id="caller_details_div">
                        <div class="form-group col-md-4">
                          <label for="firstname">First Name : *</label>
-                         <input class="form-control" type="text" id="first_name" name="first_name" size="45" placeholder="first name" required/>
+                         <input class="form-control" type="text" id="first_name" name="first_name" size="45" placeholder="First Name" required/>
                        </div>
                        <div class="form-group col-md-4">
-                         <label for="middlename">Midle Name : </label>
-                         <input class="form-control" type="text" id="middle_name" name="middle_name" size="45" placeholder="middle name"/>
+                         <label for="middlename">Middle Name : </label>
+                         <input class="form-control" type="text" id="middle_name" name="middle_name" size="45" placeholder="Middle Name"/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="callernumber">Last Name : *</label>
-                         <input class="form-control" type="text" id="last_name" name="last_name" maxlength="10" size="45" placeholder="last name" required/>
+                         <input class="form-control" type="text" id="last_name" name="last_name" maxlength="10" size="45" placeholder="Last Name" required/>
                        </div>
                     </div>
                     <div class="form-row" id="gender_details_div">
                       <div class="form-group col-md-4">
                         <label for="callername">Phone Number : *</label>
-                        <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength="10" placeholder="country code first e.g +254720000000" required/>
+                        <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength="10" placeholder="Country Code e.g +254720000000" required/>
                       </div>
                        <div class="form-group col-md-4">
                          <label for="sex">Gender : *</label>
@@ -114,7 +114,7 @@
                       </div>
                        <div class="form-group col-md-4">
                          <label for="callernumber">ID / Passport / Alien Number : *</label>
-                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="passport number" required/>
+                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="Passport Number" required/>
                        </div>
                     </div>
                     <div class="form-row" id="county_div" style="display: none;">
@@ -163,21 +163,21 @@
                     <div class="form-row" id="gender_details_div">
                        <div class="form-group col-md-4">
                          <label for="callername">Next of Kin : </label>
-                         <input class="form-control" type="text" id="nok" name="nok" placeholder="next of kin"/>
+                         <input class="form-control" type="text" id="nok" name="nok" placeholder="Next of Kin"/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="callername">Next of Kin Phone No : </label>
-                         <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of kin phone number"/>
+                         <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of Kin Phone Number"/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="middlename">Village : </label>
-                         <input class="form-control" type="text" id="village" name="village" size="45" placeholder="village"/>
+                         <input class="form-control" type="text" id="village" name="village" size="45" placeholder="Village"/>
                        </div>
                     </div>
                     <div class="form-row" id="country_details_div">
                       <div class="form-group col-md-6">
                         <label for="firstname">Street : </label>
-                        <input class="form-control" type="text" id="street" name="street" size="45" placeholder="Strees" />
+                        <input class="form-control" type="text" id="street" name="street" size="45" placeholder="Street" />
                       </div>
                         <div class="form-group col-md-6">
                              <label for="datereport">Date of Arrival : *</label>
@@ -236,11 +236,11 @@
                      <div class="form-row" id="comobidity_details_div">
                        <div class="form-group col-md-3">
                          <label for="temperature">Temperature : *</label>
-                         <input class="form-control" type=number step=0.01 id="temperature" name="temperature" onchange="checkTemp()" maxlength="5" placeholder="temperature"/>
+                         <input class="form-control" type=number step=0.01 id="temperature" name="temperature" onchange="checkTemp()" maxlength="5" placeholder="Temperature"/>
                        </div>
                        <div class="form-group col-md-3">
                          <label for="comorbidity">Comorbidity : </label>
-                         <input class="form-control" type="text" id="comorbidity" name="comorbidity" placeholder="comorbidity"/>
+                         <input class="form-control" type="text" id="comorbidity" name="comorbidity" placeholder="Comorbidity"/>
                        </div>
                        <div class="form-group col-md-3">
                          <label for="drugs">Any drugs on? : </label>
@@ -263,29 +263,29 @@
                      <div class="form-row" id="company_div">
                        <div class="form-group col-md-4">
                          <label for="c_name">Company Name : *</label>
-                         <input class="form-control" type="text" id="company_name" name="company_name" size="45" placeholder="company name" required/>
+                         <input class="form-control" type="text" id="company_name" name="company_name" size="45" placeholder="Company Name" required/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="c_phone">Company Phone : *</label>
-                         <input class="form-control" type="tel" id="company_phone" name="company_phone" placeholder="company phone" required>
+                         <input class="form-control" type="tel" id="company_phone" name="company_phone" placeholder="Company Phone" required>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="c_address">Company Physical Address : </label>
-                         <input class="form-control" type="text" id="company_address" name="company_address" placeholder="company physical address">
+                         <input class="form-control" type="text" id="company_address" name="company_address" placeholder="Company Physical Address">
                        </div>
                      </div>
                      <div class="form-row" id="company2_div">
                        <div class="form-group col-md-4">
                          <label for="c_building">Company Building : </label>
-                         <input class="form-control" type="text" id="company_building" name="company_building" size="45" placeholder="company building"/>
+                         <input class="form-control" type="text" id="company_building" name="company_building" size="45" placeholder="Company Building"/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="c_street">Company Street : </label>
-                         <input class="form-control" type="text" id="company_street" name="company_street" placeholder="company street">
+                         <input class="form-control" type="text" id="company_street" name="company_street" placeholder="Company Street">
                        </div>
                        <div class="form-group col-md-4">
                          <label for="v_reg">Vehicle Registration : *</label>
-                         <input class="form-control" type="text" id="vehicle_registration" name="vehicle_registration" placeholder="vehicle registration" required>
+                         <input class="form-control" type="text" id="vehicle_registration" name="vehicle_registration" placeholder="Vehicle Registration" required>
                        </div>
                      </div>
                      <div class="form-row col-md-12">
@@ -296,15 +296,15 @@
                      <div class="form-row" id="company_div">
                        <div class="form-group col-md-4">
                          <label for="h_name">Hotel Name : </label>
-                         <input class="form-control" type="text" id="hotel_name" name="hotel_name" size="45" placeholder="Hotel name"/>
+                         <input class="form-control" type="text" id="hotel_name" name="hotel_name" size="45" placeholder="Hotel Name"/>
                        </div>
                        <div class="form-group col-md-4">
                          <label for="h_phone">Hotel Phone Number: </label>
-                         <input class="form-control" type="tel" id="hotel_phone" name="hotel_phone" placeholder="hotel phone">
+                         <input class="form-control" type="tel" id="hotel_phone" name="hotel_phone" placeholder="Hotel Phone">
                        </div>
                        <div class="form-group col-md-4">
                          <label for="h_town">Hotel Town : </label>
-                         <input class="form-control" type="text" id="hotel_town" name="hotel_town" placeholder="hotel town">
+                         <input class="form-control" type="text" id="hotel_town" name="hotel_town" placeholder="Hotel Town">
                        </div>
                      </div>
                      <div class="form-row" id="dates_div">
@@ -320,7 +320,7 @@
                      <div class="form-row" id="action_div">
                        <div class="form-group col-md-12">
                          <label for="action">Action Taken :</label>
-                         <textarea class="form-control" id="action_taken" rows="3" name="action_taken" placeholder="Enter action taken"></textarea>
+                         <textarea class="form-control" id="action_taken" rows="3" name="action_taken" placeholder="Enter Action Taken"></textarea>
                        </div>
                      </div>
                       <div class="form-row" id="save_div">
