--- a/veoc/templates/veoc/truck_quarantine_follow_up.html
+++ b/veoc/templates/veoc/truck_quarantine_follow_up.html
@@ -66,9 +66,24 @@
                             {% else %}
                                 <td>{{ follow.body_temperature }}</td>
                             {% endif %}
-                            <td>{{ follow.fever }}</td>
-                            <td>{{ follow.cough }}</td>
-                            <td>{{ follow.difficulty_breathing }}</td>
+                            {% if follow.fever == 'Yes' %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.fever }}</b></td>
+                            {% else %}
+                                <td>{{ follow.fever }}</td>
+                            {% endif %}
+                            {% if follow.cough == 'Yes' %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.cough }}</b></td>
+                            {% else %}
+                                <td>{{ follow.cough }}</td>
+                            {% endif %}
+                            {% if follow.difficulty_breathing == 'Yes' %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.difficulty_breathing }}</b></td>
+                            {% else %}
+                                <td>{{ follow.difficulty_breathing }}</td>
+                            {% endif %}              
                             {% if follow.comment.strip %}
                               <td>{{ follow.comment }}</td>
                             {% else %}
