--- a/veoc/templates/veoc/border_list.html
+++ b/veoc/templates/veoc/border_list.html
@@ -111,7 +111,7 @@
                         </div>
 
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        <button type="submit" id="addsitebtn" class="btn btn-success btn-sm pull-right"> <i class="fa fa-plus" aria-hidden="true"></i> Add Quarantine Site</button>
+                        <button type="submit" id="addsitebtn" class="btn btn-success btn-sm pull-right"> <i class="fa fa-plus" aria-hidden="true"></i> Add Border Point</button>
                     </form>
                 </div>
                 </div>
